/*
 * Copyright 2014 Google Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto.serving;

import "kythe/proto/common.proto";

// A derivative of xref.NodeInfo for serving.
message Node {
  string ticket = 1;
  repeated kythe.proto.common.Fact fact = 2;
}

// Full representation of a Kythe edge; useful during post-processing.
message Edge {
  Node source = 1;
  string kind = 2;
  int32 ordinal = 5;
  Node target = 3;

  repeated kythe.proto.common.Fact fact = 4;
}

// An EdgeGroup represents a set of edges with the same kind and source.
//
// Note: this is a derivative of xref.EdgeSet_Group
message EdgeGroup {
  message Edge {
    Node target = 1;
    int32 ordinal = 2;
  }
  string kind = 1;
  repeated Edge edge = 2;
}

// PagedEdgeSets are used for efficiently storing EdgeSets, all originating from
// the same source ticket, in order to handle pagination requests.
message PagedEdgeSet {
  // The source node for all the edges in the edge set.
  Node source = 1;

  // Each group is a collection of outbound edges from source node sharing a
  // given kind.
  repeated EdgeGroup group = 2;

  // Total number of edges in all of the EdgePages, including this one.
  int32 total_edges = 3;

  // Page indices for other EdgePages, sorted by edge kind.
  repeated PageIndex page_index = 4;
}

// PageIndex is a pointer to an EdgePage.  In order to keep the PagedEdgeSet
// small, we don't store edges here.  We just store a key for looking up an
// EdgePage and the type of edge.
message PageIndex {
  // The kind of all edges on the referred EdgePage.
  string edge_kind = 1;

  // Total number of edges on the referred EdgePage.
  int32 edge_count = 2;

  // Key that can be used to lookup the referred EdgePage.
  string page_key = 3;
}

// EdgePages are a group of edges for a particular edge kind and source ticket.
message EdgePage {
  // Corresponding PageIndex key that can be used to lookup this page.
  string page_key = 1;
  string source_ticket = 2;
  EdgeGroup edges_group = 3;
}

// FileDirectory describes a virtual directory of file nodes.
message FileDirectory {
  // Set of URIs for each contained sub-directory's corpus, root, and full path.
  repeated string subdirectory = 1;

  // Set of file node tickets contained within this directory.
  repeated string file_ticket = 2;
}

// CorpusRoots describes all of the known corpus/root pairs that contain file
// nodes.
message CorpusRoots {
  message Corpus {
    string corpus = 1;
    repeated string root = 2;
  }
  repeated Corpus corpus = 1;
}

// A File is a specialized Node structure for file nodes.
message File {
  string ticket = 1;
  bytes text = 2;
  string encoding = 3;
}

// A RawAnchor is a specialized Node structure for anchor nodes.
message RawAnchor {
  string ticket = 1;
  int32 start_offset = 2;
  int32 end_offset = 3;

  int32 snippet_start = 4;
  int32 snippet_end = 5;
}

// ExpandedAnchors are constructed from an RawAnchor and its associated File.
// They contain normalized Spans based on their parent file's text as well as
// the UTF8-encoded text for both the anchor's span and its snippet span.
message ExpandedAnchor {
  string ticket = 1;
  string kind = 2;
  string parent = 3;

  string text = 4;
  kythe.proto.common.Span span = 5;

  string snippet = 6;
  kythe.proto.common.Span snippet_span = 7;
}

// FileDecorations stores a file's contents and all contained anchor edges.
message FileDecorations {
  File file = 1;

  // Represents an edge from an anchor contained within the file to some target.
  message Decoration {
    RawAnchor anchor = 1;
    string kind = 2;
    string target = 5;

    string target_definition = 4;
  }

  // The decorations located in the file, sorted by starting offset.
  repeated Decoration decoration = 2;

  // Set of nodes associated with each Decoration.target.
  repeated Node target = 4;

  // Set of definition locations for each Decoration.target.
  repeated ExpandedAnchor target_definitions = 3;
}

// PagedCrossReferences are used for efficiently storing pre-cached data for
// CrossReferencesReply.{definition,reference,documentation} anchors.  Related
// nodes can be retrieved from edge sets/pages.
message PagedCrossReferences {
  message Group {
    string kind = 1;
    repeated ExpandedAnchor anchor = 2;
  }

  message Page {
    string page_key = 1;
    string source_ticket = 2;
    Group group = 3;
  }

  // A PageIndex is a reference to a Page.
  message PageIndex {
    string kind = 1;
    int32 count = 2;
    string page_key = 3;
  }

  string source_ticket = 1;
  repeated Group group = 2;
  repeated PageIndex page_index = 3;
  int32 total_references = 4;

  // Whether the source node is incomplete.  This changes whether
  // /kythe/edge/defines edges are considered declarations or definitions.
  // /kythe/edge/completes edges are always grouped as definitions.
  bool incomplete = 5;
}
